# hailo-apps-infra

./: .gitignore  README.md  curr_output.md  download_resources.sh  full_infra.md  install.py  install.sh  meson.build  new_README.md  pyproject.toml  requirements.txt  run_tests.sh  setup.py  setup_env.sh
config/: config.yaml  resources_config.yaml
cpp/: depth_estimation.cpp  depth_estimation.hpp  meson.build
doc/: README.md  app_development_guide.md  developer_guide.md  face_recognition_readme.md  installation_guide.md  pipeline_development_guide.md  usage_of_all_pipelines.md
doc/developer_guide/: README.md  app_development.md  retraining_example.md  writing_postprocess.md
doc/user_guide/: installation.md  running_applications.md
hailo_apps_infra/: depth_pipeline.py  detection_pipeline.py  detection_pipeline_simple.py  detection_pipeline_yolo_v11.py  gstreamer_app.py  gstreamer_helper_pipelines.py  hailo_rpi_common.py  instance_segmentation_pipeline.py  pose_estimation_pipeline.py
hailo_apps_infra/common/: hailo_rpi_common.py  pyproject.toml
hailo_apps_infra/common/hailo_common/: __init__.py  config_utils.py  core.py  defines.py  get_config_values.py  hailo_rpi_common.py  installation_utils.py  test_utils.py  utils.py
hailo_apps_infra/config/: config.yaml  pyproject.toml  resources_config.yaml
hailo_apps_infra/config/hailo_config/: config.yaml  resources_config.yaml
hailo_apps_infra/core/: depth_pipeline.py  detection_pipeline.py  detection_pipeline_simple.py  instance_segmentation_pipeline.py  pose_estimation_pipeline.py
hailo_apps_infra/gstreamer/: gstreamer_app.py  pyproject.toml
hailo_apps_infra/gstreamer/hailo_gstreamer/: gstreamer_app.py  gstreamer_helper_pipelines.py
hailo_apps_infra/hailo_apps/hailo_gstreamer/: gstreamer_app.py  gstreamer_helper_pipelines.py
hailo_apps_infra/hailo_apps/hailo_pipelines/: detection_pipeline.py  detection_pipeline_simple.py  face_recognition_pipeline.py  instance_segmentation_pipeline.py
hailo_apps_infra/hailo_core/hailo_common/: base_ui_callbacks.py  core.py  db_handler.py  defines.py  installation_utils.py  test_utils.py
hailo_apps_infra/install/: compile_cpp.py  download_resources.py  install.py  post_install.py  set_env.py
hailo_apps_infra/installation/: pyproject.toml
hailo_apps_infra/pipelines/: pyproject.toml
install/: install.py  post_install.py  set_env.py  validate_config.py
local_resources/: face_recon_algo_params.json
scripts/: DirToPdf.py  hailo_installation_script.sh  hailo_python_installation.sh
tests/: test_all_pipelines.py  test_all_runs.py  test_face_recon.py  test_hefs.py  test_pipelines.py  test_retraining.py  test_run_everything.py  test_sanity_check.py  test_special_features.py
(+43 files in other folders)
