[project]
name = "hailo-apps-infra"
version = "1.0.0"
description = "Infra package to install all modular Hailo apps"
authors = [{ name = "Hailo", email = "https://community.hailo.ai/" }]
dependencies = [
    "hailo-common @ file://./hailo_apps_infra/common",
    "hailo-config @ file://./hailo_apps_infra/config",
    "hailo-installation @ file://./hailo_apps_infra/installation",
    "hailo-gstreamer @ file://./hailo_apps_infra/gstreamer",
    "hailo-pipeline @ file://./hailo_apps_infra/pipelines",
    "numpy<2.0.0",
    "setproctitle",
    "opencv-python",
    "python-dotenv",
    "pyyaml"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
