[project]
name            = "hailo-apps-infra"
version         = "0.4.0"
description     = "Infra package to install all modular Hailo apps"
readme          = "README.md"
requires-python = ">=3.7"

# Inline tables must be on one line—this fixes the "Unclosed inline table" error
authors = [
  { name = "Hailo" }
]

urls = { Community = "https://community.hailo.ai/" }

dependencies = [
  "numpy<2.0.0",
  "setproctitle",
  "opencv-python",
  "python-dotenv",
  "pyyaml",
]

[project.scripts]
hailo-infra-install = "install:main"
hailo-detect = "hailo_apps_infra.pipelines.hailo_pipelines.detection_pipeline:main"
hailo-depth = "hailo_apps_infra.pipelines.hailo_pipelines.depth_pipeline:main"
hailo-pose = "hailo_apps_infra.pipelines.hailo_pipelines.pose_estimation_pipeline:main"
hailo-seg = "hailo_apps_infra.pipelines.hailo_pipelines.instance_segmentation_pipeline:main"
hailo-simple-detect = "hailo_apps_infra.pipelines.hailo_pipelines.detection_pipeline_simple:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["hailo_apps_infra*",]
exclude = [
  "cpp",
  "resources",
  "local_resources",
  "hailo_infra_venv",
  "storage_deb_whl_dir",
  "build*",
  "tests",
]

[build-system]
requires       = ["setuptools>=61.0", "wheel"]
build-backend  = "setuptools.build_meta:__legacy__"